30/07/2011 Changes

Modified package registry to use stack. You have a default package name for all
classes defined in a file. You can override but don't - people wont be expecting
it. 
Modified proprocessor grammer to support short hand import statements. These expand to longer hand
messages.

29/07/2011 Changes

Added creation and registration of subclasses using new/simpler approach.
Working on namespace support.
Adding special thread local registry to handle registering a package against the 
objects created in a .st file.


28/07/2011 Changes

Added method dispatch and with simplified bootstrapped hierarchy.
Moved class and instance data object out of ProtoObject - reduce lines in file.
Added bootstrap methods to get runtime working.


27/07/2011 Changes

Added boostrapper and initial bootstrap class Symbol.
Added creation of Symbol with primitive java value.


26/07/2011 Changes

Added simpler handling of common bytecodes.
Added primitive for creating Symbols.


25/07/2011 Changes

Restructured the implementation hierarchy, not Java object st.redline.ProtoObject
is base of all things.
ClassBytecodeWriter made simpler.
Fixed bug with resolving a class - if the loading of a class doesn't register itself
in the class hierarchy then all hell breaks loose (NullPointerException).


23/07/2011 Changes

Adding base support in Object to be an object. Working towards class parts.


22/07/2011 Changes

Modified <init> method to call applyTo() on itself (instance of java dynamic class) so 
calls 'self' have a proper receiver. In preparation for namespaces/packages.
ie: so in a statement like "self import: 'package'", self refers to a proper object.
Using Object cache in resolving class Objects. 
Added primitive to register an object in classes cache.


21/07/2011 Changes

Moves primitives inline - might make Object class really big but stack traces are shorter.
Intoduced Redline runtime exception to wrap non-runtime exceptions.
Started adding runtime support in Object